--- a/djnotes/templates/notes/index.html
+++ b/djnotes/templates/notes/index.html
@@ -8,5 +8,18 @@
 </head>
 <body>
 	<h1>Hello world!</h1>
+	<ul>
+		{% for note in notes %}
+			<li>
+				<div>
+					Title: {{ note.title }} <br>
+					Note: {{ note.note }}
+				</div>
+			</li>
+		{% endfor %}
+	</ul>
+	<!--<div>
+		{{notes}}
+	</div>-->
 </body>
 </html>
