--- a/djnotes/templates/notes/index.html
+++ b/djnotes/templates/notes/index.html
@@ -1,51 +1,19 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-	<meta charset="utlf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'base.html' %}
+{% block title %}Notes{% endblock title %}
 
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" rel="stylesheet" />
-	<title>My awesome note app</title>
-</head>
-<body>
-	<div class="container">
-		<div class="navbar navbar-default">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="javascript:void(0)">
-						<strong>Notes</strong>
-					</a>
-				</div>
-				<div class="navbar-collapse collapse navbar-responsive-collapse">
-				</div>
+{% block content %}
+<div class="row">
+	{% for note in notes %}
+	<div class="col-md-3">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<strong>{{ note.title }}</strong>
 			</div>
-		</div>
-
-		{# Content section #}
-		<div class="row">
-			{% for note in notes %}
-			<div class="col-md-3">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<strong>{{ note.title }}</strong>
-					</div>
-					<div class="panel-body">
-						{{ note.note }}
-					</div>
-				</div>
+			<div class="panel-body">
+				{{ note.note }}
 			</div>
-			{% endfor %}
 		</div>
 	</div>
-	{# Content section #}
-	<script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap-theme.min.js"></script>
-</body>
-</html>
+	{% endfor %}
+</div>
+{% endblock content %}
